--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ main {
   display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(6, minmax(256px, 1fr));
 }
 
 .btn-container {
@@ -38,13 +38,13 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  grid-column: 2 / 6;
+  grid-column: 2 / 7;
   background-color: var(--clr-dark-gray2);
 }
 
 .btn {
   margin: 0.5rem 0;
-  width: 16rem;
+  width: 12rem;
   height: 2.75rem;
   font-size: 0.75rem;
   font-family: inherit;
@@ -59,19 +59,67 @@ main {
   transition: transform 200ms ease;
 }
 
-.btn:first-child {
-  margin-top: 2rem;
-}
-
-.btn:last-child {
-  margin-bottom: 2rem;
+.sldr {
+  margin: 0.5rem 0;
+  width: 12rem;
+  height: 2.75rem;
 }
 
 .btn-reset {
   margin-top: auto;
 }
 
+.btn-first,
+.sldr-first {
+  margin-top: 2rem;
+}
+
+.btn-last,
+.sldr-last {
+  margin-bottom: 2rem;
+}
+
 .btn:hover {
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.38);
+}
+
+.subbtn,
+.subsubbtn {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.subbtn-group,
+.subsubbtn-group {
+  width: 100%;
+  transition: 200ms ease;
+  position: absolute;
+  top: 0;
+  transform: translateX(100%) translateY(-1.5rem) scale(0);
+  background-color: var(--clr-dark-gray1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 6px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.38);
+}
+
+.subbtn-group-first,
+.subsubbtn-group-first {
+  transform: translateX(100%) translateY(0) scale(0);
+}
+
+.subbtn:hover .subbtn-group,
+.subsubbtn:hover .subsubbtn-group {
+  transform: translateX(95%) translateY(-1.5rem) scale(1);
+}
+
+.subbtn:hover .subbtn-group-first,
+.subsubbtn:hover .subsubbtn-group-first {
+  transform: translateX(95%) translateY(0) scale(1);
 }
