--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,14 @@ main {
   transition: transform 200ms ease;
 }
 
+.txt {
+  margin: 0.5rem 0;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--clr-white);
+}
+
 .sldr {
   margin: 0.5rem 0;
   width: 12rem;
@@ -70,12 +78,14 @@ main {
 }
 
 .btn-first,
-.sldr-first {
+.sldr-first,
+.txt-first {
   margin-top: 2rem;
 }
 
 .btn-last,
-.sldr-last {
+.sldr-last,
+.txt-last {
   margin-bottom: 2rem;
 }
 
