Add image upload button

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,35 @@ main {
   grid-template-columns: repeat(6, minmax(256px, 1fr));
 }
 
+input[type='file'] {
+  display: none;
+}
+
+.file-upload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0;
+  width: 12rem;
+  height: 2.75rem;
+  font-size: 0.75rem;
+  font-family: inherit;
+  border: none;
+  appearance: none;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-weight: 500;
+
+  background-color: var(--clr-green);
+  color: var(--clr-white);
+  transition: transform 200ms ease;
+  cursor: pointer;
+}
+
+.file-upload-txt {
+  margin-left: 0.5rem;
+}
+
 .btn-container {
   display: flex;
   flex-direction: column;
@@ -89,7 +118,8 @@ main {
   margin-bottom: 2rem;
 }
 
-.btn:hover {
+.btn:hover,
+.file-upload:hover {
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.38);
 }
@@ -132,4 +162,8 @@ main {
 .subbtn:hover .subbtn-group-first,
 .subsubbtn:hover .subsubbtn-group-first {
   transform: translateX(95%) translateY(0) scale(1);
+}
+
+.hidden {
+  display: none;
 }
